<resources>
    <string name="app_name">ShoppingApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_tienda">Editar Tienda</string>
    <string name="BorrarTienda_title">Borrar Tienda</string>
    <string name="BorrarTienda_message">Quiere borrar la tienda?</string>
    <string name="BorrarTienda_yes">Sí</string>
    <string name="BorrarTienda_no">No</string>

    <string name="list_fragment_delete_ok_message">La Tienda se ha borrado correctamente</string>

    <string name="menu_backup_now_button_text">Backup Now</string>

    <string name="backup_menu_cloud">Cloud</string>
    <string name="backup_menu_sd">SD</string>
    <string name="weekly_freq">weekly</string>
    <string name="daily_freq">Daily</string>
    <string name="cloud_backup_opt">Cloud</string>
    <string name="sd_backuo_option">SD</string>
    <string name="backup_now">Do backup</string>
    <string name="BorrarTienda">Borrar tienda</string>
    <string name="set_here_as_location">Set Here as location</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_map_menu_button">Show Map</string>

</resources>
